--- a/src/sample/gui/View/addMovie.fxml
+++ b/src/sample/gui/View/addMovie.fxml
@@ -6,19 +6,47 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="138.0" prefWidth="293.0" style="-fx-background-color: #20120F;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.gui.View.AddMovie">
+<AnchorPane prefHeight="408.0" prefWidth="293.0" style="-fx-background-color: #20120F;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.gui.View.AddMovie">
    <children>
-      <TextField layoutX="24.0" layoutY="56.0" prefHeight="25.0" prefWidth="189.0" style="-fx-background-color: #a6a0a0;" />
-      <Button layoutX="217.0" layoutY="53.0" mnemonicParsing="false" style="-fx-background-color: #20120F;" text="ADD" textFill="#f508e1">
+      <TextField layoutX="14.0" layoutY="97.0" prefHeight="25.0" prefWidth="263.0" style="-fx-background-color: #a6a0a0;" />
+      <Button layoutX="217.0" layoutY="362.0" mnemonicParsing="false" style="-fx-background-color: #20120F;" text="ADD" textFill="#f508e1">
          <font>
-            <Font name="Bauhaus 93" size="18.0" />
+            <Font name="Bauhaus 93" size="20.0" />
          </font>
       </Button>
-      <Text fill="#0bee34" layoutX="24.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NEW MOVIE">
+      <Text fill="#0bee34" layoutX="91.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NEW MOVIE">
          <font>
             <Font name="Bauhaus 93" size="22.0" />
          </font>
       </Text>
+      <Text fill="#0aebe0" layoutX="13.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
+         <font>
+            <Font name="Bauhaus 93" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="#0aebe0" layoutX="17.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Year">
+         <font>
+            <Font name="Bauhaus 93" size="14.0" />
+         </font>
+      </Text>
+      <TextField layoutX="17.0" layoutY="156.0" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: #a6a0a0;" />
+      <Text fill="#0aebe0" layoutX="17.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Duration">
+         <font>
+            <Font name="Bauhaus 93" size="14.0" />
+         </font>
+      </Text>
+      <TextField layoutX="17.0" layoutY="210.0" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: #a6a0a0;" />
+      <Text fill="#0aebe0" layoutX="17.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rating">
+         <font>
+            <Font name="Bauhaus 93" size="14.0" />
+         </font>
+      </Text>
+      <TextField layoutX="17.0" layoutY="270.0" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: #a6a0a0;" />
+      <Text fill="#0aebe0" layoutX="19.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Path">
+         <font>
+            <Font name="Bauhaus 93" size="14.0" />
+         </font>
+      </Text>
+      <TextField layoutX="17.0" layoutY="330.0" prefHeight="25.0" prefWidth="257.0" style="-fx-background-color: #a6a0a0;" />
    </children>
 </AnchorPane>
