--- a/src/sample/gui/View/Main.fxml
+++ b/src/sample/gui/View/Main.fxml
@@ -16,7 +16,7 @@
             <Font name="Bauhaus 93" size="64.0" />
          </font>
       </Text>
-      <TableView fx:id="lstCat" layoutX="14.0" layoutY="14.0" prefHeight="297.0" prefWidth="165.0" style="-fx-background-image: #20120F;">
+      <TableView fx:id="lstCat" layoutX="14.0" layoutY="14.0" onMouseClicked="#handleGetCatMovies" prefHeight="297.0" prefWidth="165.0" style="-fx-background-image: #20120F;">
         <columns>
           <TableColumn fx:id="catNameColumn" prefWidth="165.33330821990967" style="-fx-background-color: #a6a0a0;" text="GENRE" />
         </columns>
@@ -24,11 +24,11 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <TableView layoutX="200.0" layoutY="111.0" prefHeight="155.0" prefWidth="371.0">
+      <TableView fx:id="lstCatMov" layoutX="200.0" layoutY="111.0" prefHeight="155.0" prefWidth="371.0">
         <columns>
-          <TableColumn prefWidth="210.00001525878906" style="-fx-background-color: #a6a0a0;" text="Name" />
-          <TableColumn prefWidth="86.6666259765625" style="-fx-background-color: #a6a0a0;" text="Duration" />
-            <TableColumn prefWidth="73.33334350585938" style="-fx-background-color: #a6a0a0;" text="Rating" />
+          <TableColumn fx:id="nameSongColumn" prefWidth="210.00001525878906" style="-fx-background-color: #a6a0a0;" text="Name" />
+          <TableColumn fx:id="durationcolumn" prefWidth="86.6666259765625" style="-fx-background-color: #a6a0a0;" text="Duration" />
+            <TableColumn fx:id="ratingcolumn" prefWidth="73.33334350585938" style="-fx-background-color: #a6a0a0;" text="Rating" />
         </columns>
       </TableView>
       <Button layoutX="184.0" layoutY="275.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="109.0" style="-fx-background-color: #20120F;" text="ADD MOVIE" textAlignment="RIGHT" textFill="#0bee34">
