--- a/src/sample/gui/View/Main.fxml
+++ b/src/sample/gui/View/Main.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #20120F;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.gui.controller.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #20120F;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.gui.Controller.MainController ">
 
    <children>
       <Text fill="#f508e1" layoutX="200.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MOVIE">
@@ -16,7 +16,7 @@
             <Font name="Bauhaus 93" size="64.0" />
          </font>
       </Text>
-      <TableView fx:id="lstCat" layoutX="14.0" layoutY="14.0" onMouseClicked="#handleGetCatMovies" prefHeight="297.0" prefWidth="165.0" style="-fx-background-image: #20120F;">
+      <TableView fx:id="lstCat" layoutX="14.0" layoutY="14.0" prefHeight="297.0" prefWidth="165.0" style="-fx-background-image: #20120F;">
         <columns>
           <TableColumn fx:id="catNameColumn" prefWidth="165.33330821990967" style="-fx-background-color: #a6a0a0;" text="GENRE" />
         </columns>
